...
                            imageColor: .white,
                            backgroundColor: .orange,
                            title: "Funambol Puzzle",
                            description: "The original prompt 3x3 grid puzzle."
                        )
                    }
                    .accessibilityIdentifier("funambolPuzzleButton") // Moved identifier to Button
                }
                .padding(.horizontal)
                VStack(spacing: 16) {
                    NavigationLink(destination: CustomGameView()) {
                        MainOptionView(
                            imageName: "gearshape.fill",
                            imageColor: .white,
                            backgroundColor: .gray,
                            title: "Custom Game",
                            description: "Why not add some twist in it eh?"
                        )
                    }
                    .accessibilityIdentifier("customGameButton") // Moved identifier to Button
                }
                .padding(.horizontal)

                Spacer()
            }
            .overlay(
...
